[package]
name = "sketched"
version = "0.1.0"
authors = ["Emmanuel Durand <emmanueldurand@pm.me>"]
edition = "2018"
license = "GPL"
repository = "https://github.com/RelativelyOrganized/sketched"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17"
env_logger = "0.8.1"
image = "0.23"
log = "0.4.11"
luminance = "0.43"
luminance-front = "0.3"
luminance-glfw = "0.14"
luminance-glutin = "0.11"
luminance-windowing = "0.9"
glfw = "0.41"
glutin = "0.25"
